--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,11 @@ dist-ssr
 *.sw?
 
 # Custom
-index.html
-package-lock.json
-package.json
-tsconfig.json
-vite.config.js
+Page/
+public/
+src/
+/index.html
+/package-lock.json
+/package.json
+/tsconfig.json
+/vite.config.ts
